[package]
name = "hon-sagashi-rust"
version = "0.1.0"
authors = ["kojakatsuma <katsuma.koja@ubiregi.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fantoccini = "0.17.2"
tokio = { version = "1.2.0", features = ["macros","rt-multi-thread","time"] }
serde_json = "1.0"
webdriver = "0.43.0"